# json2csv-live

./: Makefile  README.md  output.csv  pyproject.toml  test_data.json  test_input.json
.github/workflows/: ci.yml
docs/migrations/: 1eec99e0.md  f3ca7aa5.md
src/json2csv/: __init__.py  main.py
tests/: test_main.py
